--- a/memory game/style.css
+++ b/memory game/style.css
@@ -2,6 +2,11 @@ body{
   background-color: rgb(51, 47, 47);
   color:white;
   font-family: Arial, Helvetica, sans-serif;
+  height: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 #grid{
   display:flex;
