--- a/New folder/style.css
+++ b/New folder/style.css
@@ -9,7 +9,6 @@ body{
     color:white;
 }
 .Main{
-    background-color: rgb(20, 32, 56);
     display: flex;
     align-items: center;
     height: 700px;
@@ -48,7 +47,8 @@ body{
 .icons{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    gap:60px;
+    justify-content: center;
     width: 300px;
 }
 .Songs{
@@ -68,6 +68,9 @@ body{
     padding-left: 15px;
     border-radius: 10px;
 }
+.song-name{
+    margin-top:10px;
+}
 .play2{
     position: absolute;
     right: 25px;
@@ -81,6 +84,7 @@ body{
     margin-top:10px;
     font-size: 14px;
     margin-bottom: 10px;
+
 }
 .music-range{
     color:red;
@@ -94,5 +98,6 @@ body{
     background-color: rgb(202, 129, 129);
 }
 .pause:hover,.reload:hover{
-    opacity:0.7;
+    opacity:0.5;
 }
+
